<resources>
    <string-array name="flowers">
        <item>Rose</item>
        <item>Tulip</item>
        <item>Daisy</item>
        <item>Dandelion</item>


    </string-array>
    <string-array name="options">
        <item>Light</item>
        <item>Dark</item>

    </string-array>
    <string name="app_name">FlowerShop</string>
    <string name="first_text">Choose a flower</string>
    <string name="add">Add</string>
    <string name="quantity">Quantity</string>
    <string name="order1">Please, write your name here</string>
    <string name="order2">Please, write your phone number</string>
    <string name="order">Order</string>
    <string name="orderb">Choose language</string>
    <string name="contacts">Our Contacts</string>

</resources>
